testing pull request

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     			$("#data").accordion({collapsible: true, active:false});
 			});
 		</script>
-		<br>
-		<h1>Homework 2 - Team Members and Data Sources</h1>
-		<br><h1><a href="https://github.com/DistantCollaborators/HW2-Team-and-Data">Distant Collaborators<a></h1><br>
+		<br><h1><a href="http://DistantCollaborators.github.io">The Distant Collaborators<a></h1><br>
 
 		<table cellpadding="10">
 			<tr id="title">
@@ -36,7 +34,6 @@
 				<td><a href="http://nmdenison.github.io/">URL</a></td>
 			</tr>
 		</table>
-		<h4><u>Click the Categories Below</u></h4> 
 		<div id="data">
 			<h2>Zillow Data Sources</h2>
 			<div>
