--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 				<td>Data.gov</td>
 				<td><p>Many US Government data sets available (138,198).</p></td>
 				<td><p>This is a broad source of data but may be very useful to combine with other data used within our project effort</p></td>
-				<td><p><a href="http://catalog.data.gov/dataset" target="blank">DATA.GOV<a></p></td>
-				<td><p><a href="http://catalog.data.gov/dataset/supplemental-nutrition-assistance-program-participation-and-cost-data" target="blank">
+				<td><p><a href="http://catalog.data.gov/dataset" target="blank">DATA.GOV<a></p>
+				<p><a href="http://catalog.data.gov/dataset/supplemental-nutrition-assistance-program-participation-and-cost-data" target="blank">
 					Food Stamps<a></p></td>
 			</tr>
 			<tr id="project">
