--- a/index.html
+++ b/index.html
@@ -20,25 +20,24 @@
 		</script>
 		<br><h1><a href="http://DistantCollaborators.github.io">The Distant Collaborators<a></h1><br>
 
+		<!--table with links to the team members HW1s-->
 		<table cellpadding="10">
 			<tr id="title">
 				<td>Team Members<br><font size="4">Distance Students</font></td>
-				<td>Github Links</td>
 			</tr>
 			<tr id="table">
-				<td>Andy</td>
-				<td><a href="http://kay6.github.io/">URL</a></td>
+				<td><a href="http://kay6.github.io/">Andy</a></td>
 			</tr>
 			<tr id="table">
-				<td>Greg</td>
-				<td><a href="http://gregxrenner.github.io/IE590/">URL</a></td>
+				<td><a href="http://gregxrenner.github.io/IE590/">Greg</a></td>
 			</tr>
 			<tr id="table">
-				<td>Nathan</td>
-				<td><a href="http://nmdenison.github.io/">URL</a></td>
+				<td><a href="http://nmdenison.github.io/">Nathan</a></td>
 			</tr>
 		</table>
 
+
+		<!--table for the datasets-->
 		<br><br>
 		<table cellpadding="10" width="80%">
 			<tr id="header">
