Edit to HW3, and added link on main site

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 				<td><a href="http://nmdenison.github.io/">Nathan</a></td>
 			</tr>
 		</table>
+		
+		<!--table with links to each group HW-->
+		<table cellpadding="10">
+			<tr id="title">
+				<td>Assignment</td><td>Link</td>
+			</tr>
+			<tr id="table">
+				<td>HW3</td>
+				<td><a href="http://DistantCollaborators.github.io/HW3/HW3.html">http://DistantCollaborators.github.io/HW3/HW3.html</a></td>
+			</tr>
+		</table>
 
 
 		<!--table for the datasets-->
