Added link to Distant Collaborators Repository
Per HW2 grading.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<body><center>
 
 		<br><h1>The Distant Collaborators</h1><br>
+		<h2><a href="https://github.com/DistantCollaborators/DistantCollaborators.github.io">Repository Link</a></h2><br>
 
 		<!--table with links to the team members HW1s-->
 		<table cellpadding="10">
