One too many breaks.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body><center>
 
-		<br><h1>The Distant Collaborators</h1><br>
+		<br><h1>The Distant Collaborators</h1>
 		<h2><a href="https://github.com/DistantCollaborators/DistantCollaborators.github.io">Repository Link</a></h2><br>
 
 		<!--table with links to the team members HW1s-->
