--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 			<tr id="table">
 				<td><a href="http://nmdenison.github.io/">Nathan</a></td>
 			</tr>
+			<tr id="table">
+				<td><a href="https://github.com/daniel-west">Daniel</a></td>
+			</tr>
 		</table>
 		<br><br>
 		
