--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<p><a href="http://developer.usatoday.com/docs/read/Census" target="blank">USA Today</a></p></td>
 			</tr>
 			<tr id="project">
-				<td>Sports</td>
+				<td><img src="https://www.data.gov/media/2013/11/Datagov_logo.jpg" alt="Data.gov" style="width:35px; height:35px">Sports</td>
 				<td><p>This data is for various professional and major college sports, including American Football and Baseball.</p></td>
 				<td><p>Sports data visitations is growing in popularity, one example being the sports section on FiveThirtyEight. Baseball in particular generates a lot of data from which Bayesian predictions could be made based on the large number of events.</p></td>
 				<td><p><a href="https://developer.yahoo.com/yql/console/?_uiFocus=fantasysports&q=select%20*%20from%20fantasysports.games%20where%20game_key%3D%22238%22l" target="blank">FantasySports Games<a></p>
