--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<p><a href="http://developer.usatoday.com/docs/read/Census" target="blank">USA Today</a></p></td>
 			</tr>
 			<tr id="project">
-				<td><img src="http://upload.wikimedia.org/wikipedia/commons/7/7a/Basketball.png" alt="Sports" style="width:35px; height:35px">Sports</td>
+				<td><img src="http://upload.wikimedia.org/wikipedia/commons/7/7a/Basketball.png" alt="Sports" style="padding:5px; width:35px; height:35px">Sports</td>
 				<td><p>This data is for various professional and major college sports, including American Football and Baseball.</p></td>
 				<td><p>Sports data visitations is growing in popularity, one example being the sports section on FiveThirtyEight. Baseball in particular generates a lot of data from which Bayesian predictions could be made based on the large number of events.</p></td>
 				<td><p><a href="https://developer.yahoo.com/yql/console/?_uiFocus=fantasysports&q=select%20*%20from%20fantasysports.games%20where%20game_key%3D%22238%22l" target="blank">FantasySports Games<a></p>
@@ -88,7 +88,7 @@
 				<p><a href="http://gd2.mlb.com/components/game/mlb/" target="blank">MLB Game Data</a></p></td>
 			</tr>
 			<tr id="project">
-				<td><img src="https://www.data.gov/media/2013/11/Datagov_logo.jpg" alt="Data.gov" style="width:45px; height:35px">Data.gov</td>
+				<td><img src="https://www.data.gov/media/2013/11/Datagov_logo.jpg" alt="Data.gov" style="padding:5px; width:45px; height:35px">Data.gov</td>
 				<td><p>Many US Government data sets available (138,198).</p></td>
 				<td><p>This is a broad source of data but may be very useful to combine with other data used within our project effort</p></td>
 				<td><p><a href="http://catalog.data.gov/dataset" target="blank">DATA.GOV<a></p>
@@ -96,7 +96,7 @@
 					Food Stamps<a></p></td>
 			</tr>
 			<tr id="project">
-				<td><img src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/simple-black-square-icons-natural-wonders/127323-simple-black-square-icon-natural-wonders-stars11.png" alt="Astronomy" style="width:35px; height:35px">Astronomical</td>
+				<td><img src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/simple-black-square-icons-natural-wonders/127323-simple-black-square-icon-natural-wonders-stars11.png" alt="Astronomy" style="padding:5px; width:35px; height:35px">Astronomical</td>
 				<td><p>Various good data sources available for examing astronomical visualizations.</p></td>
 				<td><p>Many possible visulatizations for exploration or entertainment regarding astronomy.</p></td>
 				<td><p><a href="http://hacktheuniverse.github.io/star-api/" target="blank">Star Data<a></p></td>
