--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -26,7 +26,7 @@
 	<h1>HW4</h1>
 
 <!--Comment Feature-->	
-<div id="disqus_thread" style="width:400px;"></div>
+<div id="disqus_thread" style="width:40%;" align="center"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = 'dc-ie590';
