--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -23,10 +23,12 @@
 </style>
 
 <body>
+<center>
+	
 	<h1>HW4</h1>
 
 <!--Comment Feature-->	
-<div id="disqus_thread" style="width:40%;" align="center"></div>
+<div id="disqus_thread" style="width:600px;"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = 'dc-ie590';
@@ -39,6 +41,7 @@
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-<!--End Feature-->	
+<!--End Feature-->
+</center>
 </body>
 </html>
