--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -28,7 +28,7 @@
 	<h1>HW4</h1>
 
 <!--Comment Feature-->	
-<div id="disqus_thread" style="width:600px;"></div>
+<div id="disqus_thread" style="width:600px; margin:0px auto;"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = 'dc-ie590';
