--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 				<td>HW3</td>
 				<td><a href="http://DistantCollaborators.github.io/HW3/HW3.html">http://DistantCollaborators.github.io/HW3/HW3.html</a></td>
 			</tr>
+			<tr id="table">
+				<td>HW4</td>
+				<td><a href="http://distantcollaborators.github.io/HW4/HW4.html">http://distantcollaborators.github.io/HW4/HW4.html</a></td>
+			</tr>
 		</table>
 
 
