--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</tr>
 			<tr id="table">
 				<td>HW4</td>
-				<td><a href="http://distantcollaborators.github.io/HW4/HW4.html">http://distantcollaborators.github.io/HW4/HW4.html</a></td>
+				<td><a href="http://distantcollaborators.github.io/HW4/HW4.html">http://DistantCollaborators.github.io/HW4/HW4.html</a></td>
 			</tr>
 		</table>
 
