--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-	<title>HW4</title>
+	<meta charset="utf-8">
+	<title>HW 4</title>
+	<script src="http://d3js.org/d3.v3.js"></script>
 </head>
 
 <style>
@@ -26,6 +28,58 @@
 <center>
 	
 	<h1>HW4</h1>
+	<p>2005 Benefits per Household</p>
+<div>
+	<script type="text/javascript">
+		var w = 500;
+		var h = 300;
+		var projection = d3.geo.albersUsa()
+			.translate([w/2, h/2])
+			.scale([500]);
+		var path = d3.geo.path()
+			.projection(projection);
+		var color = d3.scale.quantize()
+			.range(["#FFFAFA","#F4C2C2","#FF6961","#CE1620","#800000"]);
+		var svg = d3.select("body")
+					.append("svg")
+					.attr("width", w)
+					.attr("height", h);
+		d3.csv("2005costPerHome.csv", function(data) {
+			color.domain([
+				d3.min(data, function(d) { return d.value; }), 
+				d3.max(data, function(d) { return d.value; })
+			]);
+			d3.json("us-states.json", function(json) {
+				for (var i = 0; i < data.length; i++) {
+					var dataState = data[i].state;
+					var dataValue = parseFloat(data[i].value);
+					for (var j = 0; j < json.features.length; j++) {
+						var jsonState = json.features[j].properties.name;
+						if (dataState == jsonState) {
+							json.features[j].properties.value = dataValue;
+							break;
+						}
+					}		
+				}
+				svg.selectAll("path")
+				   .data(json.features)
+				   .enter()
+				   .append("path")
+				   .attr("d", path)
+				   .style("fill", function(d) {
+				   		var value = d.properties.value;
+				   		
+				   		if (value) {
+					   		return color(value);
+				   		} else {
+					   		return "#ccc";
+				   		}
+				   });
+		
+			});
+		});
+	</script>
+</div>
 
 <!--Comment Feature-->	
 <div id="disqus_thread" style="width:600px; margin:0px auto;"></div>
