update index.html broken link attempt 2

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<td><a href="http://kay6.github.io/">Andy</a></td>
 			</tr>
 			<tr id="table">
-				<td><a href="http://gregxrenner.github.io/IE590/Homework1.html">Greg</a></td>
+				<td><a href="http://gregxrenner.github.io/IE590/Homework.html">Greg</a></td>
 			</tr>
 			<tr id="table">
 				<td><a href="http://nmdenison.github.io/">Nathan</a></td>
