--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -39,9 +39,9 @@
 	<p>2005 Benefits per Household</p>
 	<ul class="legend">
     		<li><span class="first"></span> $200 or less</li>
-    		<li><span class="second"></span>between $200 and $228</li>
-    		<li><span class="third"></span> Between $229 and $260</li>
-    		<li><span class="fourth"></span> Between $261 and $299</li>
+    		<li><span class="second"></span>$200-$228</li>
+    		<li><span class="third"></span> $229-$260</li>
+    		<li><span class="fourth"></span> $261-$299</li>
      		<li><span class="fifth"></span> $300 and up </li>
 	</ul>
 
