--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -37,6 +37,7 @@
 	
 	<h1>HW4</h1>
 	<p>2005 Benefits per Household</p>
+	<div id="legend1" style="margin:0px auto;">
 	<ul class="legend">
     		<li><span class="first"></span> $200 or less</li>
     		<li><span class="second"></span>$200-$228</li>
@@ -44,6 +45,7 @@
     		<li><span class="fourth"></span> $261-$299</li>
      		<li><span class="fifth"></span> $300 and up </li>
 	</ul>
+	</div>
 
 <div id="plot1" style="margin:0px auto;">
 	<script type="text/javascript">
