--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -89,7 +89,7 @@
 		});
 	</script>
 </div>
-<div id="legend1" style="margin:0px auto;">
+<div align="center">
 	<ul class="legend">
     		<li><span class="first"></span> $200 or less</li>
     		<li><span class="second"></span>$200-$228</li>
