--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>HW 4</title>
+	<title>HW 41</title>
 	<script src="http://d3js.org/d3.v3.js"></script>
 </head>
 
@@ -89,7 +89,7 @@
 		});
 	</script>
 </div>
-<div align="center">
+<div style="width:300px; margin: 0 auto 0 auto;">
 	<ul class="legend">
     		<li><span class="first"></span> $200 or less</li>
     		<li><span class="second"></span>$200-$228</li>
