--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>HW 4</title>
+	<title>HW 41</title>
 	<script src="http://d3js.org/d3.v3.js"></script>
 </head>
 
@@ -40,8 +40,8 @@
 
 <div id="plot1" style="margin:0px auto;">
 	<script type="text/javascript">
-		var w = 1000;
-		var h = 600;
+		var w = 500;
+		var h = 300;
 		var projection = d3.geo.albersUsa()
 			.translate([w/2, h/2])
 			.scale([500]);
@@ -89,7 +89,7 @@
 		});
 	</script>
 </div>
-<div style="width:800px; margin: 0 auto 10px auto;">
+<div style="width:600px; margin: 0 auto 0 auto;">
 	<ul class="legend">
     		<li><span class="first"></span> $200 or less</li>
     		<li><span class="second"></span>$200-$228</li>
