--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -89,7 +89,7 @@
 		});
 	</script>
 </div>
-<div style="width:600px; margin: 0 auto 10px auto;">
+<div style="width:600px; margin: 0 auto 0 auto;">
 	<ul class="legend">
     		<li><span class="first"></span> $200 or less</li>
     		<li><span class="second"></span>$200-$228</li>
