--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -37,6 +37,10 @@
 	
 	<h1>HW4</h1>
 	<p>2005 Benefits per Household</p>
+	<p>The map below shows the benefits per household by state for the Supplemental
+		Nutrition Assistance Program. This program was formally known as the Food Stamps program.
+		Blank States reflect an absence of data.
+	</p>
 
 <div id="plot1" style="margin:0px auto;">
 	<script type="text/javascript">
