--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -39,7 +39,8 @@
 	<p>2005 Benefits per Household</p>
 	<p>The map below shows the benefits per household by state for the Supplemental
 		Nutrition Assistance Program. This program was formally known as the Food Stamps program.
-		Blank States reflect an absence of data.
+		Blank States reflect an absence of data. Thanks to Mrs. Nadine Nichols and Mrs. Maeve Myers 
+		for providing the specific data we were looking for.
 	</p>
 
 <div id="plot1" style="margin:0px auto;">
