--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -35,7 +35,7 @@
 <body>
 <center>
 	
-	<h1>HW4</h1>
+	<h1>Distant Collaborators HW4</h1>
 	<p>2005 Benefits per Household</p>
 	<p>The map below shows the benefits per household by state for the Supplemental
 		Nutrition Assistance Program. This program was formally known as the Food Stamps program.
