--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -38,7 +38,7 @@
 	<h1>Distant Collaborators HW4</h1>
 	<p>2005 Benefits per Household</p>
 	<p>The map below shows the benefits per household by state for the Supplemental
-		Nutrition Assistance Program. This program was formally known as the Food Stamps program.
+		Nutrition Assistance Program (SNAP). This program was formally known as the Food Stamps program.
 		Blank States reflect an absence of data. Thanks to Mrs. Nadine Nichols and Mrs. Maeve Myers 
 		for providing the specific data we were looking for.
 	</p>
