--- a/HW4/ProjoFoodStamps.html
+++ b/HW4/ProjoFoodStamps.html
@@ -30,7 +30,7 @@
 				console.log(SNAPdata);
 
 				SNAPdata.forEach(function(d) {
-					d.totalcost=["Total Costs ($1M)"];
+					d.totalcost=[{"Total Costs ($1M)"}]
 				});
 				console.log(SNAPdata.totalcost);
 			});
