--- a/HW4/ProjoFoodStamps.html
+++ b/HW4/ProjoFoodStamps.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>D3: Demo of linear easing</title>
+		<title>Total Cost, Average Participation and Benefit per Person of SNAP over time</title>
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<style type="text/css">
@@ -21,7 +21,7 @@
 			var w = 600;
 			var h = 250;
 			
-			var dataset = [ 5, 10, 13, 19, 21, 25, 22, 18, 15, 13,
+//			var dataset = [ 5, 10, 13, 19, 21, 25, 22, 18, 15, 13,
 							11, 12, 15, 20, 18, 17, 16, 18, 23, 25 ];
 			
 //			 http://www.fns.usda.gov/sites/default/files/pd/SNAPsummary.xls
