--- a/HW4/ProjoFoodStamps.html
+++ b/HW4/ProjoFoodStamps.html
@@ -14,7 +14,7 @@
 		<p>Click Here: Switch to Historical Costs of Food Stamps.</p>
 		<p>Click Here: Switch to see Historical Average Participation.</p>
 		<p>Click Here: Switch to Historical Average Benefit Per Person.</p>
-		<p><a href = "http://www.fns.usda.gov/sites/default/files/pd/SNAPsummary.xls target="_blank">Data.gov Source</a>
+		<p><a href = "http://www.fns.usda.gov/sites/default/files/pd/SNAPsummary.xls" target="_blank">Data.gov Source</a>
  </p>
 		<script type="text/javascript">
 
