--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -36,7 +36,7 @@
 <center>
 	
 	<h1>Distant Collaborators HW4</h1><br><br>
-	<p>2005 Benefits per Household</p>
+	<p class="textBlock"><b>2005 Benefits per Household</b></p>
 	<p class="textBlock">The map below shows the benefits per household by state for the Supplemental
 		Nutrition Assistance Program (SNAP). This program was formally known as the Food Stamps program.
 		Blank States reflect an absence of data. Thanks to Mrs. Nadine Nichols and Mrs. Maeve Myers 
@@ -45,8 +45,8 @@
 
 <div id="plot1" style="margin:0px auto;">
 	<script type="text/javascript">
-		var w = 800;
-		var h = 480;
+		var w = 500;
+		var h = 300;
 		var projection = d3.geo.albersUsa()
 			.translate([w/2, h/2])
 			.scale([500]);
