--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -132,7 +132,9 @@
 
 </script>
 <!--End Google-->
-
+<br><br>
+<p class="textBlock"><b>Google Analytics Summary - 12 April 2015, 7:00PM EDT</b></p>
+<img src="googlesummary.jpg">
 </center>
 </body>
 </html>
