--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -88,8 +88,21 @@
 				   		} else {
 					   		return "#ccc";
 				   		}
-				   });
-		
+				   })
+   				.on("mouseover", function(d) {
+					tooltip.transition()
+					.duration(200)
+					.style("opacity", .9);
+					tooltip.html(d.state + "  " + d.value)
+					.style("left", (d3.event.pageX + 10) + "px")
+					.style("top", (d3.event.pageY - 8) + "px");
+				})
+				.on("mouseout", function(d) {
+					tooltip.transition()
+					.duration(500)
+					.style("opacity", 0);
+					});
+	
 			});
 		});
 	</script>
