--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -50,6 +50,9 @@
 		var projection = d3.geo.albersUsa()
 			.translate([w/2, h/2])
 			.scale([500]);
+		var tooltip = d3.select("body").append("div")
+					.attr("class", "tooltip")
+					.style("opacity", 0);
 		var path = d3.geo.path()
 			.projection(projection);
 		var color = d3.scale.quantize()
