--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -96,7 +96,7 @@
 					tooltip.transition()
 					.duration(200)
 					.style("opacity", .9);
-					tooltip.html(d.properties.state + "  " + d.properties.value)
+					tooltip.html(d.properties.value)
 					.style("left", (d3.event.pageX + 10) + "px")
 					.style("top", (d3.event.pageY - 8) + "px");
 				})
