Update Page Title

--- a/HW4/HW4.html
+++ b/HW4/HW4.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>HW 4</title>
+	<title>Growth and Costs of the Supplemental Nutrition Assistance Program</title>
 	<script src="http://d3js.org/d3.v3.js"></script>
 </head>
 
@@ -35,7 +35,7 @@
 <body>
 <center>
 	
-	<h1>Distant Collaborators HW4</h1><br><br>
+	<h1>Growth and Costs of the Supplemental Nutrition Assistance Program</h1><br><br>
 	<p class="textBlock"><b>2005 Benefits per Household</b></p>
 	<p class="textBlock">The map below shows the benefits per household by state for the Supplemental
 		Nutrition Assistance Program (SNAP). This program was formally known as the Food Stamps program.
