--- a/HW4/ProjoFoodStamps.html
+++ b/HW4/ProjoFoodStamps.html
@@ -26,7 +26,7 @@
 			var year = [];
 			var eachtest = [];
 			var padding = 5;
-			
+
 //			var dataset = [ 5, 10, 13, 19, 21, 25, 22, 18, 15, 13,
 //							11, 12, 15, 20, 18, 17, 16, 18, 23, 25 ];
 			
@@ -118,12 +118,11 @@
 			   .attr("fill", "white");
 
 */
-
-
 			//On click, update with new data			
 			d3.select("p")
 				.on("click", function() {
 
+					toggle=true;
 					//Update all rects
 					svg.selectAll("rect")
 					   .data(participation)
